2006-07-03  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-run-parts.cc: Add run-parts tests.

	* test/run-parts.ex?: Add run-parts test scripts.

	* configure.ac: Add check for libboost_regex.

	* sbuild/Makefile.am: Add sbuild-run-parts sources.

	* sbuild/sbuild-run-parts.(cc|h): New files.  This class
	reproduces the functionality of run-parts(8).

	* sbuild/sbuild-util.cc (exec): Add (moved from sbuild-session).

	* sbuild/sbuild-session.cc (exec): Remove.

2006-07-03  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-personality.cc: Sync tests with current personality
	behaviour.

	* test/sbuild-dirstream.cc: Remove unused environment members, and
	an unused header.

	* test/Makefile.am (sbuild_personality_SOURCES): Correct sources.

2006-07-01  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-dirstream.cc: New file.  Tests for
	sbuild::dirstream.

	* sbuild/sbuild-dirstream.(cc.h): New files.  This class provides
	a "directory stream" interface to the SUS directory functions.

2006-06-29  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* sbuild/sbuild-chroot-config.cc
	(parse_data): Remove exception wrapper, now that sbuild::keyfile
	throws exceptions containing more detailed information.

	* sbuild/sbuild-chroot-file.cc
	(get_file_repack, set_file_repack): New methods to get and set
	file repack status.

	* All chroot get_keyfile and set_keyfile methods are implemented
	in terms of the new keyfile::[gs]et_object_(list_)value methods.

	* sbuild/sbuild-keyfile.h: Add templated static methods for
	getting and setting key values and list values using pointers to
	methods of other objects.

2006-06-29  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-keyfile.cc: Add test for getting line numbers.

	* sbuild/sbuild-keyfile.h:
	(item_type, group_type): Add line number to both tuples.
	(set_value): Add overloaded private method which adds a line
	number to its arguments.
	(operator >>): Set line numbers when deserialising.
