@@ -91,9 +91,6 @@ AC_PATH_PROG([FIND], [find])
 AC_PATH_PROG([XARGS], [xargs])
 AC_PATH_PROG([DOXYGEN], [doxygen])
 AM_CONDITIONAL([USE_DOXYGEN], [test -n "$DOXYGEN"])
-AC_PATH_PROG([RUN_PARTS], [run-parts])
-AH_TEMPLATE(RUN_PARTS, [run-parts binary])
-AC_DEFINE_UNQUOTED(RUN_PARTS, ["$RUN_PARTS"], )
 # Checks for libraries.
 PKG_CHECK_MODULES([UUID], [uuid])
 AM_PATH_CPPUNIT([1.10.0], [HAVE_CPPUNIT=true])
